# dqfl

dqfl/: README.md  debug_output.py  experiment_log.json  global_model_1  global_model_2  global_model_3  global_model_4  global_model_5  pyproject.toml  run_experiments.py  sandbox.ipynb
dqfl/dqfl/: __init__.py  client_app.py  my_strategy.py  server_app.py  task.py
dqfl/fixed_alpha_exp_001/: plot_experiment.ipynb  setting_0_run_1.json  setting_0_run_10.json  setting_0_run_100.json  setting_0_run_11.json  setting_0_run_12.json  setting_0_run_13.json  setting_0_run_14.json  setting_0_run_15.json  setting_0_run_16.json  setting_0_run_17.json  setting_0_run_18.json  setting_0_run_19.json  setting_0_run_2.json  setting_0_run_20.json  setting_0_run_21.json  setting_0_run_22.json  setting_0_run_23.json  setting_0_run_24.json  setting_0_run_25.json  setting_0_run_26.json  setting_0_run_27.json  setting_0_run_28.json  setting_0_run_29.json  setting_0_run_3.json  setting_0_run_30.json  setting_0_run_31.json  setting_0_run_32.json  setting_0_run_33.json  setting_0_run_34.json  setting_0_run_35.json  setting_0_run_36.json  setting_0_run_37.json  setting_0_run_38.json  setting_0_run_39.json  setting_0_run_4.json  setting_0_run_40.json  setting_0_run_41.json  setting_0_run_42.json  setting_0_run_43.json  (+761 more)
dqfl/fixed_alpha_exp_005/: experiment_log_0.json  experiment_log_1.json  experiment_log_2.json  experiment_log_3.json  experiment_log_4.json  experiment_log_5.json  experiment_log_6.json  experiment_log_7.json  plot_experiment.ipynb  read_json_lab.ipynb
fl-tabular/: pyproject.toml
fl-tabular/fltabular/: client_app.py  my_strategy.py  server_app.py  task.py
