[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dqfl"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "rafael"

[tool.flwr.app.components]
serverapp = "dqfl.server_app:app"
clientapp = "dqfl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 1.0 # Percentage of clients sampled in each round
local-epochs = 1
alpha = 0.3
class_balance = 0.0
num_examples = 1.0 # Standard configuration corresponds to FedAvg
num_classes = 0.0
avg_mi = 0.0
feature_accuracy = 0.0
label_distribution_balance = 0.0
avg_ffi= 0.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
