[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-tabular"
version = "1.0.0"
description = "Adult Census Income Tabular Dataset and Federated Learning in Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets>=0.5.0",
    "torch==2.5.1",
    "scikit-learn==1.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "fltabular.server_app:app"
clientapp = "fltabular.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 1.0 # Percentage of clients sampled in each round
local-epochs = 1
alpha = 0.5
class_balance = 0.0
num_examples = 1.0 # Standard configuration corresponds to FedAvg
num_classes = 0.0
avg_mi = 0.0
feature_accuracy = 0.0
label_distribution_balance = 0.0
avg_ffi= 0.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
